# astryx

./: .gitignore  README.md  src-20260307-pre-dv-changes.tgz  wrangler.jsonc
docs/: Tauri_Development_Practices.md  VALIDATION-TESTS.md  astryx-tools-hosting-plan.md  development-plan-20260706.md  gh-issue-insert.py  index.html  issues-COMMENTARY.md  onboarding.md
planning/: todo.md
src/: fetch-test.html  index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: backup.rs  filters.rs  imaging_programs.rs  imaging_projects.rs  imaging_sessions.rs  locations.rs  mod.rs  pinned_targets.rs  sensors.rs  settings.rs  targets.rs  telescopes.rs  todo_targets.rs  tutorial_progress.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src/css/: backup-restore.css  base.css  daily-visibility.css  dropdown.css  fov.css  help.css  imaging-log.css  misc.css  optimizer.css  reports.css  seq-plan.css  sidebar.css  sidebar.css.BU  target-filter.css  target-search.css  titles.css  todo.css  tutorial.css  utilities.css  yearly-observability.css
src/help/: 404.html  Creating-Target-Database.md  best-months.html  best-months.md  build-help.py  calculate-best-months.md.v1  changelog.html  help-system.md  index.html  sequence-planner.html  target-database.html  target-database.md  tutorial.md  yearly-observability.html
src/js/: algorithm-validation-view.js  app.js  asiair-log-parser.js  (+50 more)
website/: astryx.html  index.html  mindforge.html  nav.js  photyx.html  scriptum.html  styles.css
(+37 files in other folders)
